[package]
name = "frontear"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.6"
regex = "1.5"
lazy_static = "1.4"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
object = "0.36.7"
py-spy = { git = "https://github.com/benfred/py-spy", branch = "master" }
remoteprocess = "0.5.0"
libc = "0.2.169"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
]}
